--- a/greybox/sass/_navbar.scss
+++ b/greybox/sass/_navbar.scss
@@ -569,8 +569,11 @@
   }
 }
 .navbar {
-  background-color: #fff;
+  background-color: rgba(255,255,255,.9);
   padding: 0px 11px;
+  &:hover{
+    background-color:white;
+  }
 }
 
 .navbar-brand {
