--- a/greybox/sass/_palette.scss
+++ b/greybox/sass/_palette.scss
@@ -98,8 +98,8 @@
 }
 
 .palette-blue {
-  color: #5B5868;
-  &.palette-inverse {background-color: #5B5868;}
+  color: $blue;
+  &.palette-inverse {background-color: $blue;}
 }
 
 .palette-red {
@@ -132,18 +132,18 @@
 }
 
 .palette-grey {
-  color: #b0aca8;
-  &.palette-inverse {background-color: #b0aca8;}
+  color: $grey;
+  &.palette-inverse {background-color: $grey;}
 }
 
 .palette-lime {
-  color: #6b8c4c;
-  &.palette-inverse {background-color: #80c342;}
+  color: $lime;
+  &.palette-inverse {background-color: $lime;}
 }
 
 .palette-navy {
-  color: #37477D;
-  &.palette-inverse {background-color: #37477D;}
+  color: $navy;
+  &.palette-inverse {background-color: $navy;}
 }
 
 .palette-inverse {
