--- a/greybox/sass/_typography.scss
+++ b/greybox/sass/_typography.scss
@@ -12,51 +12,51 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
   line-height: 1;
   color: #d2d0cd;
 }
-
 h1, h2, h3 {
   margin-top: 18px;
   margin-bottom: 9px;
 }
-
 h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
   font-size: 65%;
 }
-
 h4, h5, h6 {
   margin-top: 9px;
   margin-bottom: 9px;
 }
-
 h4 small, h5 small, h6 small, h4 .small, h5 .small, h6 .small {
   font-size: 75%;
 }
-
 h1, .h1 {
-  font-size: 36px;
+  font-size: $font-size-h1;
 }
-
 h2, .h2 {
-  font-size: 30px;
+  font-size: $font-size-h2;
 }
-
 h3, .h3 {
-  font-size: 24px;
+  font-size: $font-size-h3;
 }
-
 h4, .h4 {
-  font-size: 1.15em;
+  font-size: $font-size-h4;
 }
-
 h5, .h5 {
-  font-size: 14px;
+  font-size: $font-size-h5;
 }
-
 h6, .h6 {
-  font-size: 12px;
+  font-size: $font-size-h6;
 }
-
 p {
   margin: 0 0 5px;
+}
+.article-body{
+  p:first-child:first-letter{
+    float: left;
+    font-size: $font-size-h1 * 2.085;
+    font-weight: 600;
+    line-height: 60px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+  }
 }
 blockquote.h2{
   font-weight:600;
