--- a/greybox/sass/_variables.scss
+++ b/greybox/sass/_variables.scss
@@ -17,17 +17,17 @@ $archivo: 'Archivo Black', sans-serif;
 $source: 'Source Sans Pro', sans-serif;
 $varela: 'Varela Round' sans-serif;
 
-$font-size-base:          14px !default;
-$font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
-$font-size-med:           ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-large:         ceil(($font-size-base * 2.15)) !default; // ~30px
+$font-size-base:     14px !default;
+$font-size-small:    ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-med:      ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-large:    ceil(($font-size-base * 2.15)) !default; // ~30px
 
-$font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
-$font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
-$font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
-$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-h5:            $font-size-base !default;
-$font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-h1:       floor(($font-size-base * 2.6)) !default; // ~36px
+$font-size-h2:       floor(($font-size-base * 2.15)) !default; // ~30px
+$font-size-h3:       ceil(($font-size-base * 1.7)) !default; // ~24px
+$font-size-h4:       ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-h5:       $font-size-base !default;
+$font-size-h6:       ceil(($font-size-base * 0.85)) !default; // ~12px
 
 $letter-spacing: .005em;
 
@@ -51,7 +51,7 @@ $medgrey: #ccc;
 $warmgrey1: #686258;
 $transgrey1: rgba(186,186,186,0.7);
 $grey80: #474747;
-$grey: #7c7c7c;
+$grey: #7c7c7c; //#b0aca8
 $grey80: darken($grey, 20%);
 $grey90: darken($grey, 30%);
 
@@ -59,14 +59,14 @@ $grey90: darken($grey, 30%);
 $navy: #37477D;
 $teal: #7ea29a;
 $purple: #8385c3;
-
-
 $lavender: #BFC3EC;
 $lavender-vib: #8385c3;
 $orange: #C75134;
 $olivegrey: #62645c;
 $teal2: #7DB9B3;
 $chartruese: #c1fa21;
+$blue: #2247c1;
+$lime: #6b8c4c;
 
 
 // RESPONSIVE BREAKS
