--- a/greybox/sass/_variables.scss
+++ b/greybox/sass/_variables.scss
@@ -41,7 +41,7 @@ $textcolor: #545454; //body text color ~ was = #62645c
 
 $linkcolor: #545454; // default link color ~ was = #62645c
 $link-hover-color: darken($linkcolor, 15%) !default;
-$linkhovercolor: #7EA29A; // on hovercolor of link
+$linkhovercolor: black; // #7EA29A on hovercolor of link
 $brandlinkhovercolor: black; // blrand logo color of link on hover
 
 // MONO-GREY
