--- a/greybox/sass/_footer.scss
+++ b/greybox/sass/_footer.scss
@@ -47,6 +47,12 @@
   padding-left:7px;
   padding-right:7px;
   position:relative;
+  a{
+    color:white;
+    &:hover{
+      border-bottom:1px dotted white;
+    }
+  }
   address {
     line-height: 18px;
     margin: 0 0 36px;
