--- a/greybox/sass/_variables.scss
+++ b/greybox/sass/_variables.scss
@@ -68,6 +68,12 @@ $chartruese: #c1fa21;
 $blue: #2247c1;
 $lime: #6b8c4c;
 $blueblue:#092cb1;
+$spearmint:#2ff1c7;
+$tangerine:#FFC107;
+
+$brandblue: #1a3acc;
+$brandred: #fd483a;
+$brandgreen: #2ab80a;
 
 
 // RESPONSIVE BREAKS
