--- a/greybox/sass/_variables.scss
+++ b/greybox/sass/_variables.scss
@@ -71,6 +71,8 @@ $blueblue:#092cb1;
 $spearmint:#2ff1c7;
 $tangerine:#FFC107;
 
+$cadmium:#ff5252;
+
 $brandblue: #1a3acc;
 $brandred: #fd483a;
 $brandgreen: #2ab80a;
@@ -103,5 +105,6 @@ $col-11: 91.66666666666666%;
 
 
 // ELEMENTS
+$full-3-height: 350px;
 $footer-height: 250px;
 $blog-heading: $proxima;
