--- a/greybox/sass/_typography.scss
+++ b/greybox/sass/_typography.scss
@@ -1,7 +1,7 @@
 //_typography.scss
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: $font-family-sans-serif;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
