--- a/greybox/sass/_button.scss
+++ b/greybox/sass/_button.scss
@@ -17,7 +17,10 @@
     border-color: #adadad;
   }
 }
-
+.btn-primary {
+  border-radius: 0;
+  border: 0;
+}
 .open .dropdown-toggle.btn-default {
   color: #333;
   background-color: #ebebeb;
