--- a/greybox/sass/_variables.scss
+++ b/greybox/sass/_variables.scss
@@ -38,6 +38,7 @@ $line-height-lg: 1.7857142857142858; // body
 // COLORS
 $bodycolor: #f6f6f6; //body background color
 $textcolor: #545454; //body text color ~ was = #62645c
+$quotecolor: #aaa; //quote text color ~ was #bbb
 $brandblue: #1a3acc;
 $brandred: #fd483a;
 $brandgreen: #2ab80a;
