fixing bottom-para
size adjustment to bottom-para @media

--- a/greybox/sass/_tile.scss
+++ b/greybox/sass/_tile.scss
@@ -748,14 +748,16 @@
 	}
 }
 .bottom-para{
-	min-height: $full-3-height;
+	//min-height: $full-3-height;
 	//here
-	margin-bottom:$footer-height - 100px;
+	//margin-bottom:$footer-height - 100px;
 	@media (max-width: $break-small-max){
-		margin-bottom:$footer-height - 150px;
+		position: relative;
+		bottom: $footer-height + 150px;
 	}
 	@media (min-width: $break-medium){
-		margin-bottom:$footer-height;
+		position: relative;
+		bottom: $footer-height;
 	}
 }
 
