--- a/greybox/sass/_tile.scss
+++ b/greybox/sass/_tile.scss
@@ -748,16 +748,14 @@
 	}
 }
 .bottom-para{
-	//min-height: $full-3-height;
+	min-height: $full-3-height;
 	//here
-	//margin-bottom:$footer-height - 100px;
+	margin-bottom:$footer-height - 100px;
 	@media (max-width: $break-small-max){
-		position: relative;
-		bottom: $footer-height + 150px;
+		margin-bottom:$footer-height;
 	}
 	@media (min-width: $break-medium){
-		position: relative;
-		bottom: $footer-height;
+		margin-bottom:$footer-height;
 	}
 }
 
