--- a/greybox/sass/_footer.scss
+++ b/greybox/sass/_footer.scss
@@ -13,26 +13,25 @@
   color:white;
   border-bottom:none;
     &:hover, &:focus {
-      color: $linkhovercolor-inverse;
-      border-bottom: 1px solid $linkcolor-inverse;
+      color: $linkhovercolor;
     }
   }
   #back-top{
     position:absolute;
     right:8px;
-    top:-40px;
+    top:-30px;
     a{
       color:white;
       font-size:2em;
-      opacity:.25;
+      opacity:.5;
       &:hover{
         opacity:1;
       }
       i{
-        border:1px solid white;
+        border:2px solid white;
         width:38px;
         padding:4px;
-        border-radius:0;//30px
+        border-radius:30px;
       }
     }
   }
