--- a/greybox/sass/_prime.scss
+++ b/greybox/sass/_prime.scss
@@ -1377,13 +1377,7 @@ a {
   line-height: 1;
   color: #d2d0cd;
 }
-.article-body{
-  p{
-    a{
-      color: $articlelink;
-    }
-  }
-}
+
 .callout {
   .small {
     font-weight: normal;
@@ -1518,6 +1512,11 @@ a {
       }
     }
   }
+}
+
+.btn-primary {
+  border-radius: 0;
+  border: 0;
 }
 
 .page-careers {
