--- a/greybox/sass/_variables.scss
+++ b/greybox/sass/_variables.scss
@@ -38,13 +38,13 @@ $line-height-lg: 1.7857142857142858; // body
 // COLORS
 $bodycolor: #f6f6f6; //body background color
 $textcolor: #545454; //body text color ~ was = #62645c
-<<<<<<< HEAD
+//<<<<<<< HEAD
 $quotecolor: #aaa; //quote text color ~ was #bbb
 $brandblue: #1a3acc;
 $brandred: #fd483a;
 $brandgreen: #2ab80a;
-=======
->>>>>>> parent of ac5fbb0... blue blue
+//=======
+//>>>>>>> parent of ac5fbb0... blue blue
 
 $linkcolor: #545454; // default link color ~ was = #62645c
 $link-hover-color: darken($linkcolor, 15%) !default;
