--- a/greybox/sass/_navbar.scss
+++ b/greybox/sass/_navbar.scss
@@ -703,7 +703,7 @@
     margin-bottom: 0;
   }
   .navbar-brand {
-    //background-color:white;
+    background-color:white;
     position: relative;
     padding: 30px 80px 30px 0;
     margin:0;
